--- a/index.html
+++ b/index.html
@@ -454,6 +454,14 @@
         align-items: start;
       }
 
+      .impact .section-heading h2 {
+        color: #fff;
+      }
+
+      .impact .section-heading p {
+        color: rgba(255, 255, 255, 0.82);
+      }
+
       .impact-card {
         background: rgba(0, 0, 0, 0.22);
         padding: 2.35rem 2.1rem;
